Basic CSS with Sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,13 @@
+$base-font-family: 'Garamond', serif;
+$header-font-family: 'Futura', sans-serif;
+
+$base-font-weight: 300;
+$base-font-size: .75rem;
+$base-line-height: 1.4rem;
+
+$text-color: #333;
+$link-color: rgb(0, 63 ,135);
+$link-hover-color: rgb(0, 131, 214);
+$base-background-color: rgb(255, 254, 248);
+
 @import "base";
