--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,10 @@
 $base-font-family: 'Garamond', serif;
-$header-font-family: 'Futura', sans-serif;
-
 $base-font-weight: 300;
 $base-font-size: .75rem;
 $base-line-height: 1.4rem;
+
+$header-font-family: 'Futura', sans-serif;
+$header-font-size:  1rem;
 
 $text-color: #333;
 $link-color: rgb(0, 63 ,135);
