--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -29,3 +29,14 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   text-transform: uppercase;
 }
+
+@media (max-width: 640px) {
+  html {
+    font-size: 0.75rem;
+  }
+
+  body {
+    padding: 1.5rem 0;
+  }
+
+}
